changed all items to the same size

--- a/film/templates/index.html
+++ b/film/templates/index.html
@@ -173,6 +173,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		</div>
    </div>
    <!------------End Header ------------>
+   <h3 align="center" style=color:brown>Watch all Movies <span>FREE</span> of charge, <span>SUBSCRIBE</span> to Watch Series at shs.4500/= per Month,shs.1500/= Weekly,<br>
+     shs.800 Daily and shs.300 a single episode.</h3>
   <div class="main">
   	<div class="wrap">
       <div class="content">
