--- a/film/templates/contact.html
+++ b/film/templates/contact.html
@@ -4,6 +4,7 @@ Author URL: http://w3layouts.com
 License: Creative Commons Attribution 3.0 Unported
 License URL: http://creativecommons.org/licenses/by/3.0/
 -->
+{% load static %}
 <!DOCTYPE HTML>  
 <head>
 <title>Free Movies Store Website Template | Contact :: w3layouts</title>
