--- a/film/templates/contact.html
+++ b/film/templates/contact.html
@@ -17,27 +17,28 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 </head>
 <body>
 	<div class="header">
-		 <div class="headertop_desc">
+		<div class="headertop_desc">
 			<div class="wrap">
 				<div class="nav_list">
 					<ul>
-						<li><a href="index.html">Home</a></li>
-						<li><a href="contact.html">Sitemap</a></li>
-						<li><a href="contact.html">Contact</a></li>
+						<li><a href="{% url 'movie' %}">UK MOVIES</a></li>
+						<li><a href="contact.html">About Us</a></li>
+						
 					</ul>
 				</div>
 					<div class="account_desc">
 						<ul>
-							<li><a href="contact.html">Register</a></li>
-							<li><a href="contact.html">Login</a></li>
-							<li><a href="preview.html">Delivery</a></li>
-							<li><a href="#">Checkout</a></li>
-							<li><a href="#">My Account</a></li>
-						</ul>
+							<li><a href="preview.html">Subscribe</a></li>
+							<li><a href="{% url 'login' %}">LogIn</a></li>
+							<li><a>Welcome:{{request.user.username}}</a></li>
+							<li><a href="{% url 'signup' %}">Register</a></li>
+						    <li><a href="{% url 'logout' %}">Logout</a></li>	
+						</ul>	
 					</div>
-				<div class="clear"></div>
 			</div>
-	  	</div>
+				<div class="clear"></div>
+		</div>
+	</div>	
   	  		<div class="wrap">
 				<div class="header_top">
 					<div class="logo">
@@ -146,69 +147,93 @@ License URL: http://creativecommons.org/licenses/by/3.0/
          </div> 
     </div>
  </div>
-   <div class="footer">
-   	  <div class="wrap">	
-	     <div class="section group">
-				<div class="col_1_of_4 span_1_of_4">
-						<h4>Information</h4>
-						<ul>
-						<li><a href="#">About Us</a></li>
-						<li><a href="#">Customer Service</a></li>
-						<li><a href="#">Advanced Search</a></li>
-						<li><a href="#">Orders and Returns</a></li>
-						<li><a href="contact.html">Contact Us</a></li>
+ <div class="footer">
+	<div class="wrap">	
+	<div class="section group">
+		   <div class="col_1_of_4 span_1_of_4">
+				   <h4>Information</h4>
+				   <ul>
+				   <li><a href="#">About Us</a></li>
+				   <li><a href="#">Customer Service</a></li>
+				   <li><a href="#">Advanced Search</a></li>
+				   <li><a href="#">Privacy Policy</a></li>
+				   </ul>
+			   </div>
+		   
+		   <div class="col_1_of_4 span_1_of_4">
+			   <h4>My account</h4>
+				   <ul>
+					   <li><a href="preview.html">Subscribe</a></li>
+					   <li><a href="{% url 'login' %}">LogIn</a></li>
+					   <li><a href="{% url 'signup' %}">Register</a></li>
+					   <li><a href="{% url 'logout' %}">Logout</a></li>	
+				   </ul>
+		   </div>
+		   <div class="col_1_of_4 span_1_of_4">
+			   <h4>Contact</h4>
+				   <ul>
+					   <li><span>0704544125</span></li>
+					   <li><span>0782411217</span></li>
+				   </ul>
+				   <div class="social-icons">
+					   <h4>Follow Us</h4>     
+							<ul>
+							 <li><a href="#" target="_blank"><img src="{% static 'images/facebook.png' %}" alt="" /></a></li>
+							 <li><a href="#" target="_blank"><img src="{% static 'images/twitter.png' %}" alt="" /></a></li>
+							 <li><a href="#" target="_blank"><img src="{% static 'images/skype.png' %}" alt="" /> </a></li>
+							 <li><a href="#" target="_blank"> <img src="{% static 'images/linkedin.png' %}" alt="" /></a></li>
+							 <div class="clear"></div>
 						</ul>
-					</div>
-				<div class="col_1_of_4 span_1_of_4">
-					<h4>Why buy from us</h4>
-						<ul>
-						<li><a href="#">About Us</a></li>
-						<li><a href="#">Customer Service</a></li>
-						<li><a href="#">Privacy Policy</a></li>
-						<li><a href="contact.html">Site Map</a></li>
-						<li><a href="#">Search Terms</a></li>
-						</ul>
-				</div>
-				<div class="col_1_of_4 span_1_of_4">
-					<h4>My account</h4>
-						<ul>
-							<li><a href="contact.html">Sign In</a></li>
-							<li><a href="index.html">View Cart</a></li>
-							<li><a href="#">My Wishlist</a></li>
-							<li><a href="#">Track My Order</a></li>
-							<li><a href="contact.html">Help</a></li>
-						</ul>
-				</div>
-				<div class="col_1_of_4 span_1_of_4">
-					<h4>Contact</h4>
-						<ul>
-							<li><span>+91-123-456789</span></li>
-							<li><span>+00-123-000000</span></li>
-						</ul>
-						<div class="social-icons">
-							<h4>Follow Us</h4>
-					   		  <ul>
-							      <li><a href="#" target="_blank"><img src="images/facebook.png" alt="" /></a></li>
-							      <li><a href="#" target="_blank"><img src="images/twitter.png" alt="" /></a></li>
-							      <li><a href="#" target="_blank"><img src="images/skype.png" alt="" /> </a></li>
-							      <li><a href="#" target="_blank"> <img src="images/linkedin.png" alt="" /></a></li>
-							      <div class="clear"></div>
-						     </ul>
-   	 					</div>
-				</div>
-			</div>
-			 <div class="copy_right">
-				<p>Company Name © All rights Reseverd | Design by  <a href="http://w3layouts.com">W3Layouts</a> </p>
-		   </div>			
-        </div>
-    </div>
-    <script type="text/javascript">
-		$(document).ready(function() {			
-			$().UItoTop({ easingType: 'easeOutQuart' });
-			
-		});
-	</script>
-    <a href="#" id="toTop"><span id="toTopHover"> </span></a>
+					   </div>
+		   </div>
+	   </div>
+		<div class="copy_right">
+		   <p>Usakag fashions © All rights Reseverd | Design by  <a href="#">UK_MOVIES</a> </p>
+	  </div>			
+   </div>
+ <script type="text/javascript">
+	 $(document).ready(function() {			
+		 $().UItoTop({ easingType: 'easeOutQuart' });
+		 
+	 });
+ </script>
+ <a href="#" id="toTop"><span id="toTopHover"> </span></a>
+  <!-- Main content -->
+  <section class="content">
+	<!-- Content Block -->
+	{% if messages %}
+	<ul class="messages">
+	  {% for message in messages %}
+	  <li{% if message.tags %} class="alert alert-{{message.tags }}"{% endif %}>
+	  {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}Important: {% endif %}
+	  {{ message }}
+	  </li>
+	  {% endfor %}
+	</ul> 
+	{% endif %}
+	{% block content %}
+	{% endblock %}
+	<!-- /.Content Block -->
+  </section>
+  <!-- /.content -->
+
+<!-- Bootstrap -->
+<script src="{% static 'plugins/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
+<script src="{% static 'plugins/toastr/toastr.min.js' %}"></script>
+<!-- overlayScrollbars -->
+<script src="{% static 'plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js' %}"></script>
+
+{% if messages %}
+{% for message in messages %}
+<script type=text/javascript>
+toastr.options.progressBar = true;
+toastr.{{ message.tags }}('{{ message }}')
+</script>
+{% endfor %}
+{% endif %}
+
+
 </body>
 </html>
+
 
