Added Subcriptin page

--- a/film/templates/index.html
+++ b/film/templates/index.html
@@ -66,7 +66,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				</div>
 					<div class="account_desc">
 						<ul>
-							<li><a href="preview.html">Subscribe</a></li>
+							<li><a href="{% url 'sub_payment' %}">Subscribe</a></li>
 							<li><a href="{% url 'login' %}">LogIn</a></li>
 							<li><a>Welcome:{{request.user.username}}</a></li>
 							<li><a href="{% url 'signup' %}">Register</a></li>
@@ -289,7 +289,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<div class="col_1_of_4 span_1_of_4">
 					<h4>My account</h4>
 						<ul>
-							<li><a href="preview.html">Subscribe</a></li>
+							<li><a href="{% url 'sub_payment' %}">Subscribe</a></li>
 							<li><a href="{% url 'login' %}">LogIn</a></li>
 							<li><a href="{% url 'signup' %}">Register</a></li>
 						    <li><a href="{% url 'logout' %}">Logout</a></li>	
