Made changes in Movie,Serie,and episode preview and contact

--- a/film/templates/contact.html
+++ b/film/templates/contact.html
@@ -21,7 +21,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<div class="wrap">
 				<div class="nav_list">
 					<ul>
-						<li><a href="{% url 'movie' %}">UK MOVIES</a></li>
+						<li><a href="{% url 'movie' %}">Home</a></li>
 						<li><a href="contact.html">About Us</a></li>
 						
 					</ul>
@@ -51,11 +51,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 										<li>you have no items in your Shopping cart</li>
 								</ul></div></p>
 						  </div>
-							  <div class="search_box">
-					     		<form>
-					     			<input type="text" value="Search" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Search';}"><input type="submit" value="">
-					     		</form>
-					     	</div>
+							  
 						 <div class="clear"></div>
 					</div>
 						  <script type="text/javascript">
@@ -93,15 +89,14 @@ License URL: http://creativecommons.org/licenses/by/3.0/
  	<div class="wrap">
      <div class="content">
      	<div class="content_top">
-    		<div class="back-links">
-    		<p><a href="index.html">Home</a> &gt;&gt;&gt;&gt; <a href="#" class="active">Contact</a></p>
-    	    </div>
+    		<div class="heading">
+				<h3>CONTACT US</h3>
+				</div>
     		<div class="clear"></div>
     	</div>
     	<div class="section group">
 				<div class="col span_2_of_3">
 				  <div class="contact-form">
-				  	<h2>Contact Us</h2>
 					    <form method="post" action="contact-post.html">
 					    	<div>
 						    	<span><label>Name</label></span>
@@ -134,12 +129,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
       				</div>
       			<div class="company_address">
 				     	<h2>Information :</h2>
-						    	<p>500 Lorem Ipsum Dolor Sit,</p>
-						   		<p>22-56-2-9 Sit Amet, Lorem,</p>
-						   		<p>USA</p>
-				   		<p>Phone:(00) 222 666 444</p>
-				   		<p>Fax: (000) 000 00 00 0</p>
-				 	 	<p>Email: <span><a href="#">info(at)mycompany.com</a></span></p>
+						    	
+						<p>UGANDA</p>
+				   		<p>Phone:0704544125</p>
+				   		<p>Email: <span><a href="#">usakag56@gmail.com</a></span></p>
 				   		<p>Follow on: <span><a href="#">Facebook</a></span>, <span><a href="#">Twitter</a></span></p>
 				   </div>
 				 </div>
