--- a/film/templates/index.html
+++ b/film/templates/index.html
@@ -279,7 +279,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<div class="col_1_of_4 span_1_of_4">
 						<h4>Information</h4>
 						<ul>
-						<li><a href="#">About Us</a></li>
+						<li><a href="{% url 'contact' %}">About Us</a></li>
 						<li><a href="#">Customer Service</a></li>
 						<li><a href="{% url 'search_serie_items' %}">Advanced Search</a></li>
 						<li><a href="#">Privacy Policy</a></li>
