--- a/film/templates/search.html
+++ b/film/templates/search.html
@@ -39,14 +39,14 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<div class="wrap">
 				<div class="nav_list">
 					<ul>
-						<li><a href="{% url 'movie' %}">UK MOVIES</a></li>
-						<li><a href="contact.html">About Us</a></li>
+						<li><a href="{% url 'movie' %}">Home</a></li>
+						<li><a href="{% url 'contact' %}">About Us</a></li>
 						
 					</ul>
 				</div>
 					<div class="account_desc">
 						<ul>
-							<li><a href="preview.html">Subscribe</a></li>
+							<li><a href="{% url 'sub_payment' %}">Subscribe</a></li>
 							<li><a href="{% url 'login' %}">LogIn</a></li>
 							<li><a>Welcome:{{request.user.username}}</a></li>
 							<li><a href="{% url 'signup' %}">Register</a></li>
@@ -128,7 +128,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<div class="col_1_of_4 span_1_of_4">
 						<h4>Information</h4>
 						<ul>
-						<li><a href="#">About Us</a></li>
+						<li><a href="{% url 'contact' %}">About Us</a></li>
 						<li><a href="#">Customer Service</a></li>
 						<li><a href="#">Advanced Search</a></li>
 						<li><a href="#">Privacy Policy</a></li>
