--- a/film/templates/serie_search.html
+++ b/film/templates/serie_search.html
@@ -39,14 +39,14 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<div class="wrap">
 				<div class="nav_list">
 					<ul>
-						<li><a href="{% url 'movie' %}">UK MOVIES</a></li>
-						<li><a href="contact.html">About Us</a></li>
+						<li><a href="{% url 'movie' %}">Home</a></li>
+						<li><a href="{% url 'contact' %}">About Us</a></li>
 						
 					</ul>
 				</div>
 					<div class="account_desc">
 						<ul>
-							<li><a href="preview.html">Subscribe</a></li>
+							<li><a href="{% url 'sub_payment' %}">Subscribe</a></li>
 							<li><a href="{% url 'login' %}">LogIn</a></li>
 							<li><a>Welcome:{{request.user.username}}</a></li>
 							<li><a href="{% url 'signup' %}">Register</a></li>
@@ -118,56 +118,56 @@ License URL: http://creativecommons.org/licenses/by/3.0/
       </div>
     </div>
     <div class="footer">
-           <div class="wrap">	
-           <div class="section group">
-                  <div class="col_1_of_4 span_1_of_4">
-                          <h4>Information</h4>
-                          <ul>
-                          <li><a href="#">About Us</a></li>
-                          <li><a href="#">Customer Service</a></li>
-                          <li><a href="#">Advanced Search</a></li>
-                          <li><a href="#">Privacy Policy</a></li>
-                          </ul>
-                      </div>
-                  
-                  <div class="col_1_of_4 span_1_of_4">
-                      <h4>My account</h4>
-                          <ul>
-                              <li><a href="preview.html">Subscribe</a></li>
-                              <li><a href="{% url 'login' %}">LogIn</a></li>
-                              <li><a href="{% url 'signup' %}">Register</a></li>
-                              <li><a href="{% url 'logout' %}">Logout</a></li>	
-                          </ul>
-                  </div>
-                  <div class="col_1_of_4 span_1_of_4">
-                      <h4>Contact</h4>
-                          <ul>
-                              <li><span>0704544125</span></li>
-                              <li><span>0782411217</span></li>
-                          </ul>
-                          <div class="social-icons">
-                              <h4>Follow Us</h4>     
-                                   <ul>
-                                    <li><a href="#" target="_blank"><img src="{% static 'images/facebook.png' %}" alt="" /></a></li>
-                                    <li><a href="#" target="_blank"><img src="{% static 'images/twitter.png' %}" alt="" /></a></li>
-                                    <li><a href="#" target="_blank"><img src="{% static 'images/skype.png' %}" alt="" /> </a></li>
-                                    <li><a href="#" target="_blank"> <img src="{% static 'images/linkedin.png' %}" alt="" /></a></li>
-                                    <div class="clear"></div>
-                               </ul>
-                              </div>
-                  </div>
-              </div>
-               <div class="copy_right">
-                  <p>Usakag fashions © All rights Reseverd | Design by  <a href="#">UK_MOVIES</a> </p>
-             </div>			
-          </div>
-        <script type="text/javascript">
-            $(document).ready(function() {			
-                $().UItoTop({ easingType: 'easeOutQuart' });
-                
-            });
-        </script>
-        <a href="#" id="toTop"><span id="toTopHover"> </span></a>
+        <div class="wrap">	
+        <div class="section group">
+               <div class="col_1_of_4 span_1_of_4">
+                       <h4>Information</h4>
+                       <ul>
+                       <li><a href="{% url 'contact' %}">About Us</a></li>
+                       <li><a href="#">Customer Service</a></li>
+                       <li><a href="#">Advanced Search</a></li>
+                       <li><a href="#">Privacy Policy</a></li>
+                       </ul>
+                   </div>
+               
+               <div class="col_1_of_4 span_1_of_4">
+                   <h4>My account</h4>
+                       <ul>
+                           <li><a href="preview.html">Subscribe</a></li>
+                           <li><a href="{% url 'login' %}">LogIn</a></li>
+                           <li><a href="{% url 'signup' %}">Register</a></li>
+                           <li><a href="{% url 'logout' %}">Logout</a></li>	
+                       </ul>
+               </div>
+               <div class="col_1_of_4 span_1_of_4">
+                   <h4>Contact</h4>
+                       <ul>
+                           <li><span>0704544125</span></li>
+                           <li><span>0782411217</span></li>
+                       </ul>
+                       <div class="social-icons">
+                           <h4>Follow Us</h4>     
+                                <ul>
+                                 <li><a href="#" target="_blank"><img src="{% static 'images/facebook.png' %}" alt="" /></a></li>
+                                 <li><a href="#" target="_blank"><img src="{% static 'images/twitter.png' %}" alt="" /></a></li>
+                                 <li><a href="#" target="_blank"><img src="{% static 'images/skype.png' %}" alt="" /> </a></li>
+                                 <li><a href="#" target="_blank"> <img src="{% static 'images/linkedin.png' %}" alt="" /></a></li>
+                                 <div class="clear"></div>
+                            </ul>
+                           </div>
+               </div>
+           </div>
+            <div class="copy_right">
+               <p>Usakag fashions © All rights Reseverd | Design by  <a href="#">UK_MOVIES</a> </p>
+          </div>			
+       </div>
+     <script type="text/javascript">
+         $(document).ready(function() {			
+             $().UItoTop({ easingType: 'easeOutQuart' });
+             
+         });
+     </script>
+     <a href="#" id="toTop"><span id="toTopHover"> </span></a>
     
          <!-- Main content -->
          <section class="content">
