--- a/film/templates/signup.html
+++ b/film/templates/signup.html
@@ -13,13 +13,13 @@
 			margin: 0;
 			padding: 0;
 			height: 100%;
-			background: #7abecc !important;
+			background: grey !important;
 		}
 		.user_card {
 			width: 350px;
 			margin-top: auto;
 			margin-bottom: auto;
-			background: #74cfbf;
+			background: orange;
 			position: relative;
 			display: flex;
 			justify-content: center;
@@ -38,10 +38,12 @@
 
 		#form-title{
 			color: #fff;
+			
 		}
+
 		.login_btn {
 			width: 100%;
-			background: #33ccff !important;
+			background: green !important;
 			color: white !important;
 		}
 		.login_btn:focus {
@@ -52,7 +54,7 @@
 			padding: 0 2rem;
 		}
 		.input-group-text {
-			background: #f7ba5b !important;
+			background: brown !important;
 			color: white !important;
 			border: 0 !important;
 			border-radius: 0.25rem 0 0 0.25rem !important;
@@ -63,8 +65,13 @@
 			outline: 0px !important;
 		}
 
+		#messages{
+			background-color: grey;
+			color: #fff;
+			padding: 10px;
+			margin-top: 10px;
+		}
 	</style>
-
 </head>
 <body>
 	<div class="container h-100">
