--- a/film/templates/contact.html
+++ b/film/templates/contact.html
@@ -28,7 +28,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				</div>
 					<div class="account_desc">
 						<ul>
-							<li><a href="preview.html">Subscribe</a></li>
+							<li><a href="{% url 'sub_payment' %}">Subscribe</a></li>
 							<li><a href="{% url 'login' %}">LogIn</a></li>
 							<li><a>Welcome:{{request.user.username}}</a></li>
 							<li><a href="{% url 'signup' %}">Register</a></li>
@@ -146,7 +146,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		   <div class="col_1_of_4 span_1_of_4">
 				   <h4>Information</h4>
 				   <ul>
-				   <li><a href="#">About Us</a></li>
+				   <li><a href="{% url 'contact' %}">About Us</a></li>
 				   <li><a href="#">Customer Service</a></li>
 				   <li><a href="#">Advanced Search</a></li>
 				   <li><a href="#">Privacy Policy</a></li>
@@ -156,7 +156,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		   <div class="col_1_of_4 span_1_of_4">
 			   <h4>My account</h4>
 				   <ul>
-					   <li><a href="preview.html">Subscribe</a></li>
+					   <li><a href="{% url 'sub_payment' %}">Subscribe</a></li>
 					   <li><a href="{% url 'login' %}">LogIn</a></li>
 					   <li><a href="{% url 'signup' %}">Register</a></li>
 					   <li><a href="{% url 'logout' %}">Logout</a></li>	
@@ -191,40 +191,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	 });
  </script>
  <a href="#" id="toTop"><span id="toTopHover"> </span></a>
-  <!-- Main content -->
-  <section class="content">
-	<!-- Content Block -->
-	{% if messages %}
-	<ul class="messages">
-	  {% for message in messages %}
-	  <li{% if message.tags %} class="alert alert-{{message.tags }}"{% endif %}>
-	  {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}Important: {% endif %}
-	  {{ message }}
-	  </li>
-	  {% endfor %}
-	</ul> 
-	{% endif %}
-	{% block content %}
-	{% endblock %}
-	<!-- /.Content Block -->
-  </section>
-  <!-- /.content -->
-
-<!-- Bootstrap -->
-<script src="{% static 'plugins/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
-<script src="{% static 'plugins/toastr/toastr.min.js' %}"></script>
-<!-- overlayScrollbars -->
-<script src="{% static 'plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js' %}"></script>
-
-{% if messages %}
-{% for message in messages %}
-<script type=text/javascript>
-toastr.options.progressBar = true;
-toastr.{{ message.tags }}('{{ message }}')
-</script>
-{% endfor %}
-{% endif %}
-
+  
 
 </body>
 </html>
