--- a/film/templates/subscription1.html
+++ b/film/templates/subscription1.html
@@ -97,7 +97,7 @@
 							<div class="input-group-append">
 								<span class="input-group-text"><i class="fas fa-phone"></i></span>
 							</div>
-								<input type="password" name="password" placeholder="Contact..." class="form-control" >
+								<input type="text" name="contact_info" placeholder="Contact..." class="form-control" >
 						</div>
 
 							<div class="d-flex justify-content-center mt-3 login_container">
