--- a/film/templates/episode_preview.html
+++ b/film/templates/episode_preview.html
@@ -26,13 +26,13 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<div class="nav_list">
 					<ul>
 						<li><a href="{% url 'movie' %}">Home</a></li>
-						<li><a href="contact.html">About Us</a></li>
+						<li><a href="{% url 'contact' %}">About Us</a></li>
 						
 					</ul>
 				</div>
 					<div class="account_desc">
 						<ul>
-							<li><a href="preview.html">Subscribe</a></li>
+							<li><a href="{% url 'sub_payment' %}">Subscribe</a></li>
 							<li><a href="{% url 'login' %}">LogIn</a></li>
 							<li><a>Welcome:{{request.user.username}}</a></li>
 							<li><a href="{% url 'signup' %}">Register</a></li>
@@ -147,7 +147,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				   <div class="col_1_of_4 span_1_of_4">
 					   <h4>My account</h4>
 						   <ul>
-							   <li><a href="preview.html">Subscribe</a></li>
+							   <li><a href="{% url 'sub_payment' %}">Subscribe</a></li>
 							   <li><a href="{% url 'login' %}">LogIn</a></li>
 							   <li><a href="{% url 'signup' %}">Register</a></li>
 							   <li><a href="{% url 'logout' %}">Logout</a></li>	
