--- a/film/templates/movie_preview.html
+++ b/film/templates/movie_preview.html
@@ -26,7 +26,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<div class="nav_list">
 					<ul>
 						<li><a href="{% url 'movie' %}">Home</a></li>
-						<li><a href="contact.html">About Us</a></li>
+						<li><a href="{% url 'contact' %}">About Us</a></li>
 						
 					</ul>
 				</div>
