--- a/film/templates/serie_preview.html
+++ b/film/templates/serie_preview.html
@@ -150,7 +150,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				   <div class="col_1_of_4 span_1_of_4">
 					   <h4>My account</h4>
 						   <ul>
-							   <li><a href="preview.html">Subscribe</a></li>
+							   <li><a href="{% url 'sub_payment' %}">Subscribe</a></li>
 							   <li><a href="{% url 'login' %}">LogIn</a></li>
 							   <li><a href="{% url 'signup' %}">Register</a></li>
 							   <li><a href="{% url 'logout' %}">Logout</a></li>	
