Made changes in Page titles

--- a/film/templates/contact.html
+++ b/film/templates/contact.html
@@ -7,7 +7,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 {% load static %}
 <!DOCTYPE HTML>  
 <head>
-<title>Free Movies Store Website Template | Contact :: w3layouts</title>
+<title>UK_MOVIES CONTACTS</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <link href=" {% static 'css/style.css' %}" rel="stylesheet" type="text/css" media="all"/>
