--- a/film/templates/episode_preview.html
+++ b/film/templates/episode_preview.html
@@ -11,7 +11,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <head> 
 	<link href="https://vjs.zencdn.net/7.15.4/video-js.css" rel="stylesheet" />
 	
-<title>Free Movies Store Website Template | Preview :: w3layouts</title>
+<title>UK_SERIE EPISODE</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <link href="{% static 'css/style.css' %}" rel="stylesheet" type="text/css" media="all"/>
