--- a/film/templates/serie_search.html
+++ b/film/templates/serie_search.html
@@ -9,7 +9,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 -->
 <!DOCTYPE HTML>  
 <head>
-<title>UK_MOVIES</title>
+<title>UK_SERIES SEARCH</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
