--- a/film/templates/serie_search.html
+++ b/film/templates/serie_search.html
@@ -50,9 +50,9 @@
 		</div>
 	</div>	
 
-    <!-- <div class="logo">
+    <div class="logo">
         <a href="{% url 'movie' %}"><img src="{% static 'images/Uk Logo.png' %}" alt="" /></a>
-    </div> -->
+    </div>
 
     <div class="main">
         <div class="wrap">
