Removed work flow

--- a/film/templates/index.html
+++ b/film/templates/index.html
@@ -135,8 +135,10 @@
 		</div>
    </div>
    <!------------End Header ------------>
-   <h3 align="center" style=color:brown>Watch all Movies <span>FREE</span> of charge, <span>SUBSCRIBE</span> to Watch Series at shs.4500/= per Month,shs.1500/= Weekly,<br>
-     shs.800 Daily and shs.300 a single episode.</h3>
+   <!-- <h3 align="center" style=color:brown>Watch all Movies <span>FREE</span> of charge, <span>SUBSCRIBE</span> to Watch Series at shs.4500/= per Month,shs.1500/= Weekly,<br>
+     shs.800 Daily and shs.300 a single episode.</h3> -->
+	 <h3 align="center" style=color:brown>Watch all Movies and Series <span>FREE</span> of charge</h3>
+
   <div class="main">
   	<div class="wrap">
       <div class="content">
