--- a/film/templates/movie_preview.html
+++ b/film/templates/movie_preview.html
@@ -42,7 +42,7 @@
 					<div class="logo">
 						<a href="{% url 'movie' %}"><img src="{% static 'images/Uk Logo.png' %}" alt="" /></a>
 					</div>
-						<div class="header_top_right">
+						<!-- <div class="header_top_right">
 						  <div class="cart">
 						  	   <p><span>Cart</span><div id="dd" class="wrapper-dropdown-2"> (empty)
 						  	   	<ul class="dropdown">
@@ -50,8 +50,8 @@
 								</ul></div></p>
 						  </div>
 							  
-					</div>
-						  <script type="text/javascript">
+					</div> -->
+						  <!-- <script type="text/javascript">
 								function DropDown(el) {
 									this.dd = el;
 									this.initEvents();
@@ -77,7 +77,7 @@
 									});
 					
 								});
-					    </script>
+					    </script> -->
 			   <div class="clear"></div>
   		    </div>     				
    		</div>
