--- a/film/templates/index.html
+++ b/film/templates/index.html
@@ -1,92 +1,13 @@
 
+{% extends 'base.html' %}
 {% load static %}
 {% load crispy_forms_tags %}
 {% load widget_tweaks %}
 
-<!DOCTYPE HTML>  
-<head>
-<title>UK_MOVIES</title>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+{% block content %}
 
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-
-<link href="{% static 'css/style.css' %}" rel="stylesheet" type="text/css" media="all"/>
-<link href="{% static 'css/slider.css' %}" rel="stylesheet" type="text/css" media="all"/>
-
-
-
-<script type="text/javascript" src="{% static 'js/jquery-1.9.0.min.js' %}"></script> 
-<script type="text/javascript" src="{% static 'js/move-top.js' %}"></script>
-<script type="text/javascript" src="{% static 'js/easing.js' %}"></script>
-<script type="text/javascript" src="{% static 'js/jquery.nivo.slider.js' %}"></script>
-<script type="text/javascript">
-    $(window).load(function() {
-        $('#slider').nivoSlider();
-    });
-    </script>
-<style>
-	.btn-group .button {
-  background-color: #4CAF50; /* Green */
-  border: none;
-  color: white;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  cursor: pointer;
-  float: left;
-}
-
-.btn-group .button:hover {
-  background-color: #3e8e41;
-}
-</style>
-
-</head>
-<body>
-	<div class="header">
-		<div class="headertop_desc">
-			<div class="wrap">
-				<div class="nav_list">
-					<ul>
-						<li><a href="{% url 'movie' %}">Home</a></li>
-						<li><a href="{% url 'contact' %}">About Us</a></li>
-						
-					</ul>
-				</div>
-					<div class="account_desc">
-						<ul>
-							<li><a href="{% url 'sub_payment' %}">Subscribe</a></li>
-							<li><a href="{% url 'login' %}">LogIn</a></li>
-							<li><a>Welcome:{{request.user.username}}</a></li>
-							<li><a href="{% url 'signup' %}">Register</a></li>
-						    <li><a href="{% url 'logout' %}">Logout</a></li>	
-						</ul>	
-					</div>
-			</div>
-				<div class="clear"></div>
-		</div>
-	</div>	
     	<div class="wrap">
-				<div class="header_top">
-					<div class="logo">
-						<a href="{% url 'movie' %}"><img src="{% static 'images/Uk Logo.png' %}" alt="" /></a>
-					</div>
-						<div class="header_top_right">
-						  
-						  <div class="btn-group">
-							<button class="button"><a href="{% url 'search_items' %}">MOVIES</a></button>
-							<button class="button"><a href="{% url 'search_serie_items' %}">SERIES</a></button>
-							<button class="button"><a href="#">ISLAM</a></button>
-						  </div>
-						 <div class="clear"></div>
-					</div>    
-						  
-			        <div class="clear"></div>
-  		         </div> 
+				
 		  {%if get_categorys %} 
                 <div class="header_bottom">
 					<div class="header_bottom_left">				
@@ -147,6 +68,7 @@
     		<h3>MOVIES</h3>
     		</div>   
     	</div>
+		<br>
 		{%if  get_moviy_title_filter %}
 		<form method="get">
 			<!-- {{ user_filter.form|crispy }} -->
@@ -157,8 +79,9 @@
 			{% render_field user_filter.form.movie_status1 class="form-control" placeholder="movie status1" %} -->
 			{% for field in  get_moviy_title_filter.form.visible_fields %}
       <div class="form-group">
-        <label for="{{ field.id_for_label }}">Enter Movie Title</label>
-        {{ field|add_class:'form-control' }}
+     
+		{% render_field get_moviy_title_filter.form.movie_title class="form-control" placeholder="Enter Movie Title" %}
+      
         {% for error in field.errors %}
           <span class="help-block">{{ error }}</span>
         {% endfor %}
@@ -180,7 +103,7 @@
 					 <h2><a href="{% url 'mov_detail' user_filter.id %}">{{user_filter.movie_title}}</a></h2>
 					<div class="price-details">
 				       <div class="price-number">
-							<p><span class="rupees">{{user_filter.movie_cost}}</span></p>
+							<p><span class="rupees">COST : FREE</span></p><br>
 					    </div>
 						<div class="price-number">
 							<p><span class="rupees">{{user_filter.movie_release_date}}</span></p>
@@ -208,6 +131,7 @@
     		<h3>SERIES</h3>
     		</div>
     	  </div>
+		  <br>
 		  <a class="btn btn-success" href="{% url 'search_serie_items' %}" role="button">
 			<span class="glyphicon glyphicon-ok"></span> Search</a>
 		  </button>
@@ -215,13 +139,13 @@
 				{% for get_seriys in get_seriys %}
 				<div class="grid_1_of_5 images_1_of_5">
 					 <a href="{% url 'seri_detail' get_seriys.id %}"><img src="{{ get_seriys.serie_image.url }}" alt="" /></a>
-					 <h2><a href="preview.html">{{get_seriys.serie_title}}</a></h2>
+					 <h2><a href="{% url 'seri_detail' get_seriys.id %}">{{get_seriys.serie_title}}</a></h2>
 					<div class="price-details">
 				       <div class="price-number">
 							<p><span class="rupees">{{get_seriys.serie_cost}}</span></p>
 					    </div>
 					       		<div class="add-cart">								
-									<h4><a href="preview.html">{{get_seriys.serie_VJ}}</a></h4>
+									<h4><a href="{% url 'seri_detail' get_seriys.id %}">{{get_seriys.serie_VJ}}</a></h4>
 							     </div>
 							 <div class="clear"></div>
 					</div>
@@ -237,60 +161,7 @@
        </div>
   </div>
 </div>
-   <div class="footer">
-   	  <div class="wrap">	
-	     <div class="section group">
-				<div class="col_1_of_4 span_1_of_4">
-						<h4>Information</h4>
-						<ul>
-						<li><a href="{% url 'contact' %}">About Us</a></li>
-						<li><a href="#">Customer Service</a></li>
-						<li><a href="{% url 'search_serie_items' %}">Advanced Search</a></li>
-						<li><a href="#">Privacy Policy</a></li>
-						</ul>
-					</div>
-				
-				<div class="col_1_of_4 span_1_of_4">
-					<h4>My account</h4>
-						<ul>
-							<li><a href="{% url 'sub_payment' %}">Subscribe</a></li>
-							<li><a href="{% url 'login' %}">LogIn</a></li>
-							<li><a href="{% url 'signup' %}">Register</a></li>
-						    <li><a href="{% url 'logout' %}">Logout</a></li>	
-						</ul>
-				</div>
-				<div class="col_1_of_4 span_1_of_4">
-					<h4>Contact</h4>
-						<ul>
-							<li><span>0704544125</span></li>
-							<li><span>0782411217</span></li>
-						</ul>
-						<div class="social-icons">
-							<h4>Follow Us</h4>     
-					   		  <ul>
-							      <li><a href="#" target="_blank"><img src="{% static 'images/facebook.png' %}" alt="" /></a></li>
-							      <li><a href="#" target="_blank"><img src="{% static 'images/twitter.png' %}" alt="" /></a></li>
-							      <li><a href="#" target="_blank"><img src="{% static 'images/skype.png' %}" alt="" /> </a></li>
-							      <li><a href="#" target="_blank"> <img src="{% static 'images/linkedin.png' %}" alt="" /></a></li>
-							      <div class="clear"></div>
-						     </ul>
-   	 					</div>
-				</div>
-			</div>
-			 <div class="copy_right">
-				<p>Usakag fashions © All rights Reseverd | Design by  <a href="#">UK_MOVIES</a> </p>
-		   </div>			
-        </div>
-    </div>
-    <script type="text/javascript">
-		$(document).ready(function() {			
-			$().UItoTop({ easingType: 'easeOutQuart' });
-			
-		});
-	</script>
-    <a href="#" id="toTop"><span id="toTopHover"> </span></a>
+   
 
-
-</body>
-</html>
+{% endblock content %}
 
