--- a/film/templates/episode_preview.html
+++ b/film/templates/episode_preview.html
@@ -1,199 +1,42 @@
 
+{% extends 'base.html' %}
 {% load static %}
+{% block content %}
 
-<!DOCTYPE HTML>
-<head> 
-	<link href="https://vjs.zencdn.net/7.15.4/video-js.css" rel="stylesheet" />
-	
-<title>UK_SERIE EPISODE</title>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-<link href="{% static 'css/style.css' %}" rel="stylesheet" type="text/css" media="all"/>
-<script type="text/javascript" src="{% static 'js/jquery-1.9.0.min.js' %}"></script> 
-<script type="text/javascript" src="{% static 'js/move-top.js' %}"></script>
-<script type="text/javascript" src="{% static 'js/easing.js' %}"></script>
-</head>
-<body>
-	<div class="header">
-		<div class="headertop_desc">
-			<div class="wrap">
-				<div class="nav_list">
-					<ul>
-						<li><a href="{% url 'movie' %}">Home</a></li>
-						<li><a href="{% url 'contact' %}">About Us</a></li>
-						
-					</ul>
-				</div>
-					<div class="account_desc">
-						<ul>
-							<li><a href="{% url 'sub_payment' %}">Subscribe</a></li>
-							<li><a href="{% url 'login' %}">LogIn</a></li>
-							<li><a>Welcome:{{request.user.username}}</a></li>
-							<li><a href="{% url 'signup' %}">Register</a></li>
-						    <li><a href="{% url 'logout' %}">Logout</a></li>	
-						</ul>	
-					</div>
-			</div>
-				<div class="clear"></div>
+<div class="main">
+	<div class="wrap">
+		<div class="content_top">
+		<div class="heading">
+			<h3>{{epis_detail.season.season_name}}{{ epis_detail.episode_name }}</h3>
+		</div>  
+		<div class="clear"></div>
+			
+	</div>
+		<div class="section group">     
+			<div class="cont-desc span_1_of_2">
+			  <div class="product-details">				
+				
+			<div class="desc span_3_of_2">
+				<div class="embed-responsive embed-responsive-16by9"> 
+					<p> <video
+					id="my-video"
+					class="video-js"
+					controls
+					preload="auto"
+					width="320"
+					height="240"
+					poster="{{ epis_detail.season.serie.serie_image.url }}"
+					data-setup="{}"
+				  >
+					<source src="{{ epis_detail.episode_video.url }}" type="video/mp4" />
+					</video></p>
+				</div>		
+			 
 		</div>
-	</div>	
-  	  		<div class="wrap"> 
-				<div class="header_top">
-					<div class="logo">
-						<a href="{% url 'movie' %}"><img src="{% static 'images/Uk Logo.png' %}" alt="" /></a>
-					</div>
-						<div class="header_top_right">
-						  <div class="cart">
-						  	   <p><span>Cart</span><div id="dd" class="wrapper-dropdown-2"> (empty)
-						  	   	<ul class="dropdown">
-										<li>you have no items in your Shopping cart</li>
-								</ul></div></p>
-						  </div>
-							  
-						 <div class="clear"></div>
-					</div>
-						  <script type="text/javascript">
-								function DropDown(el) {
-									this.dd = el;
-									this.initEvents();
-								}
-								DropDown.prototype = {
-									initEvents : function() {
-										var obj = this;
-					
-										obj.dd.on('click', function(event){
-											$(this).toggleClass('active');
-											event.stopPropagation();
-										});	
-									}
-								}
-					
-								$(function() {
-					
-									var dd = new DropDown( $('#dd') );
-					
-									$(document).click(function() {
-										// all dropdowns
-										$('.wrapper-dropdown-2').removeClass('active');
-									});
-					
-								});
-					    </script>
-			   <div class="clear"></div>
-  		    </div>     				
-   		</div>
-   </div>
-   <div class="main">
-   	 <div class="wrap">
-   	 	<div class="content_top">
-    		<div class="heading">
-				<h3>{{ serie_detail.serie_title }}</h3>
-			</div>
-    		<div class="clear"></div>
-    	</div>
-   	 	<div class="section group">     
-				<div class="cont-desc span_1_of_2">
-				  <div class="product-details">				
-					<div class="grid images_3_of_2">
-						<img src=" {{ serie_detail.serie_image.url }}" alt="" />
-				  </div>
-				  <div class="desc span_3_of_2">
-					<div class="available">
-						<p>
-							{%if serie_detail.season_set.all %} 
-							{% for season in serie_detail.season_set.all %}
-							<button class="accordion">{{ season.season_name }}</button>
-							{% for episode in season.episode_set.all %}
-							<div class="panel">
-							  <p>{{ episode.episode_name }}</p>
-							</div>
-							{% endfor %} 
-								{% endfor %}
-								{%else%}
-							  <div class="card-body">
-								<h4>No Data available</h4>
-								</div>
-								 {%endif%}  
-						  </p>
-					</div>
-				
-				
-			</div>
-			<div class="clear"></div>
-		  </div>
-		
-   </div>
-   		</div>
-         </div>
-		<div class="footer">
-			<div class="wrap">	
-			<div class="section group">
-				   <div class="col_1_of_4 span_1_of_4">
-						   <h4>Information</h4>
-						   <ul>
-						   <li><a href="{% url 'contact' %}">About Us</a></li>
-						   <li><a href="#">Customer Service</a></li>
-						   <li><a href="#">Advanced Search</a></li>
-						   <li><a href="#">Privacy Policy</a></li>
-						   </ul>
-					   </div>
-				   
-				   <div class="col_1_of_4 span_1_of_4">
-					   <h4>My account</h4>
-						   <ul>
-							   <li><a href="{% url 'sub_payment' %}">Subscribe</a></li>
-							   <li><a href="{% url 'login' %}">LogIn</a></li>
-							   <li><a href="{% url 'signup' %}">Register</a></li>
-							   <li><a href="{% url 'logout' %}">Logout</a></li>	
-						   </ul>
-				   </div>
-				   <div class="col_1_of_4 span_1_of_4">
-					   <h4>Contact</h4>
-						   <ul>
-							   <li><span>0704544125</span></li>
-							   <li><span>0782411217</span></li>
-						   </ul>
-						   <div class="social-icons">
-							   <h4>Follow Us</h4>     
-									<ul>
-									 <li><a href="#" target="_blank"><img src="{% static 'images/facebook.png' %}" alt="" /></a></li>
-									 <li><a href="#" target="_blank"><img src="{% static 'images/twitter.png' %}" alt="" /></a></li>
-									 <li><a href="#" target="_blank"><img src="{% static 'images/skype.png' %}" alt="" /> </a></li>
-									 <li><a href="#" target="_blank"> <img src="{% static 'images/linkedin.png' %}" alt="" /></a></li>
-									 <div class="clear"></div>
-								</ul>
-							   </div>
-				   </div>
-			   </div>
-				<div class="copy_right">
-				   <p>Usakag fashions © All rights Reseverd | Design by  <a href="#">UK_MOVIES</a> </p>
-			  </div>			
-		   </div>
-		 <script type="text/javascript">
-			 $(document).ready(function() {			
-				 $().UItoTop({ easingType: 'easeOutQuart' });
-				 
-			 });
-		 </script>
-		 <a href="#" id="toTop"><span id="toTopHover"> </span></a>
-
-	<script>
-		var acc = document.getElementsByClassName("accordion");
-		var i;
-		
-		for (i = 0; i < acc.length; i++) {
-		  acc[i].addEventListener("click", function() {
-			this.classList.toggle("active");
-			var panel = this.nextElementSibling;
-			if (panel.style.display === "block") {
-			  panel.style.display = "none";
-			} else {
-			  panel.style.display = "block";
-			}
-		  });
-		}
-		</script>
-		
-</body>
-</html>
-
+		<div class="clear"></div>
+	  </div>
+	
+</div>
+</div>
+	</div>
+ {% endblock content %}
