--- a/film/templates/serie_preview.html
+++ b/film/templates/serie_preview.html
@@ -1,92 +1,8 @@
-
+{% extends 'base.html' %}
 {% load static %}
 {% load crispy_forms_tags %}
-<!DOCTYPE HTML>
-<head>
-<title>UK_SERIES</title>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-<link href="{% static 'css/style.css' %}" rel="stylesheet" type="text/css" media="all"/>
-<script type="text/javascript" src="{% static 'js/jquery-1.9.0.min.js' %}"></script> 
-<script type="text/javascript" src="{% static 'js/move-top.js' %}"></script>
-<script type="text/javascript" src="{% static 'js/easing.js' %}"></script>
+{% block content %}
 
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-</head>
-<body>
-	<div class="header">
-		<div class="headertop_desc">
-			<div class="wrap">
-				<div class="nav_list">
-					<ul>
-						<li><a href="{% url 'movie' %}">Home</a></li>
-						<li><a href="{% url 'contact' %}">About Us</a></li>
-						
-					</ul>
-				</div>
-					<div class="account_desc">
-						<ul>
-							<li><a href="{% url 'sub_payment' %}">Subscribe</a></li>
-							<li><a href="{% url 'login' %}">LogIn</a></li>
-							<li><a>Welcome:{{request.user.username}}</a></li>
-							<li><a href="{% url 'signup' %}">Register</a></li>
-						    <li><a href="{% url 'logout' %}">Logout</a></li>	
-						</ul>	
-					</div>
-			</div>
-				<div class="clear"></div>
-		</div>
-	</div>	
-
-  	  		<div class="wrap">
-				<div class="header_top">
-					<div class="logo">
-						<a href="{% url 'movie' %}"><img src="{% static 'images/Uk Logo.png' %}" alt="" /></a>
-					</div>
-						<div class="header_top_right">
-						  <div class="cart">
-						  	   <p><span>Cart</span><div id="dd" class="wrapper-dropdown-2"> (empty)
-						  	   	<ul class="dropdown">
-										<li>you have no items in your Shopping cart</li>
-								</ul></div></p>
-						  </div>
-							  
-					     	</div>
-						 <div class="clear"></div>
-					</div>
-						  <script type="text/javascript">
-								function DropDown(el) {
-									this.dd = el;
-									this.initEvents();
-								}
-								DropDown.prototype = {
-									initEvents : function() {
-										var obj = this;
-					
-										obj.dd.on('click', function(event){
-											$(this).toggleClass('active');
-											event.stopPropagation();
-										});	
-									}
-								}
-					
-								$(function() {
-					
-									var dd = new DropDown( $('#dd') );
-					
-									$(document).click(function() {
-										// all dropdowns
-										$('.wrapper-dropdown-2').removeClass('active');
-									});
-					
-								});
-					    </script>
-			   <div class="clear"></div>
-  		    </div>     				
-   		</div>
-   </div>
    <div class="main">
    	 <div class="wrap">
    	 	<div class="content_top">
@@ -129,75 +45,5 @@
    </div>
    		</div>
          </div>
-		<div class="footer">
-			<div class="wrap">	
-			<div class="section group">
-				   <div class="col_1_of_4 span_1_of_4">
-						   <h4>Information</h4>
-						   <ul>
-						   <li><a href="{% url 'contact' %}">About Us</a></li>
-						   <li><a href="#">Customer Service</a></li>
-						   <li><a href="#">Advanced Search</a></li>
-						   <li><a href="#">Privacy Policy</a></li>
-						   </ul>
-					   </div>
-				   
-				   <div class="col_1_of_4 span_1_of_4">
-					   <h4>My account</h4>
-						   <ul>
-							   <li><a href="{% url 'sub_payment' %}">Subscribe</a></li>
-							   <li><a href="{% url 'login' %}">LogIn</a></li>
-							   <li><a href="{% url 'signup' %}">Register</a></li>
-							   <li><a href="{% url 'logout' %}">Logout</a></li>	
-						   </ul>
-				   </div>
-				   <div class="col_1_of_4 span_1_of_4">
-					   <h4>Contact</h4>
-						   <ul>
-							   <li><span>0704544125</span></li>
-							   <li><span>0782411217</span></li>
-						   </ul>
-						   <div class="social-icons">
-							   <h4>Follow Us</h4>     
-									<ul>
-									 <li><a href="#" target="_blank"><img src="{% static 'images/facebook.png' %}" alt="" /></a></li>
-									 <li><a href="#" target="_blank"><img src="{% static 'images/twitter.png' %}" alt="" /></a></li>
-									 <li><a href="#" target="_blank"><img src="{% static 'images/skype.png' %}" alt="" /> </a></li>
-									 <li><a href="#" target="_blank"> <img src="{% static 'images/linkedin.png' %}" alt="" /></a></li>
-									 <div class="clear"></div>
-								</ul>
-							   </div>
-				   </div>
-			   </div>
-				<div class="copy_right">
-				   <p>Usakag fashions © All rights Reseverd | Design by  <a href="#">UK_MOVIES</a> </p>
-			  </div>			
-		   </div>
-		 <script type="text/javascript">
-			 $(document).ready(function() {			
-				 $().UItoTop({ easingType: 'easeOutQuart' });
-				 
-			 });
-		 </script>
-		 <a href="#" id="toTop"><span id="toTopHover"> </span></a>
-
-	<script>
-		var acc = document.getElementsByClassName("accordion");
-		var i;
-		
-		for (i = 0; i < acc.length; i++) {
-		  acc[i].addEventListener("click", function() {
-			this.classList.toggle("active");
-			var panel = this.nextElementSibling;
-			if (panel.style.display === "block") {
-			  panel.style.display = "none";
-			} else {
-			  panel.style.display = "block";
-			}
-		  });
-		}
-		</script>
-		
-</body>
-</html>
+ {% endblock content %}
 
