--- a/film/templates/serie_search.html
+++ b/film/templates/serie_search.html
@@ -1,78 +1,32 @@
+{% extends 'base.html' %}
 {% load static %}
 {% load crispy_forms_tags %}
 {% load widget_tweaks %}
 
-<!DOCTYPE HTML>  
-<head>
-<title>UK_SERIES SEARCH</title>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-
-<link href="{% static 'css/style.css' %}" rel="stylesheet" type="text/css" media="all"/>
-<link href="{% static 'css/slider.css' %}" rel="stylesheet" type="text/css" media="all"/>
-
-
-<script type="text/javascript" src="{% static 'js/jquery-1.9.0.min.js' %}"></script> 
-<script type="text/javascript" src="{% static 'js/move-top.js' %}"></script>
-<script type="text/javascript" src="{% static 'js/easing.js' %}"></script>
-<script type="text/javascript" src="{% static 'js/jquery.nivo.slider.js' %}"></script>
-<script type="text/javascript">
-    $(window).load(function() {
-        $('#slider').nivoSlider();
-    });
-    </script>
-</head>
-<body>
-	<div class="header">
-		<div class="headertop_desc">
-			<div class="wrap">
-				<div class="nav_list">
-					<ul>
-						<li><a href="{% url 'movie' %}">Home</a></li>
-						<li><a href="{% url 'contact' %}">About Us</a></li>
-						
-					</ul>
-				</div>
-					<div class="account_desc">
-						<ul>
-							<li><a href="{% url 'sub_payment' %}">Subscribe</a></li>
-							<li><a href="{% url 'login' %}">LogIn</a></li>
-							<li><a>Welcome:{{request.user.username}}</a></li>
-							<li><a href="{% url 'signup' %}">Register</a></li>
-						    <li><a href="{% url 'logout' %}">Logout</a></li>	
-						</ul>	
-					</div>
-			</div>
-				<div class="clear"></div>
-		</div>
-	</div>	
-
-    <!-- <div class="logo">
-        <a href="{% url 'movie' %}"><img src="{% static 'images/Uk Logo.png' %}" alt="" /></a>
-    </div> -->
+{% block content %}
 
     <div class="main">
-        <div class="wrap">
+       <div class="wrap">
         <div class="content">
           <div class="content_top">
                
              <div class="heading">
                 <h3>SERIES</h3>
              </div>
+          </div>  
+          <br>
              {%if user_series_filter %}
              <form method="get">
                  
              {% for field in user_series_filter.form.visible_fields %}
            <div class="form-group">
-           <label for="{{ field.id_for_label }}">{{ field.label }}</label>
-           {{ field|add_class:'form-control' }}
+           <!-- <label for="{{ field.id_for_label }}">Enter Serie Title</label> -->
+           {% render_field user_series_filter.form.serie_title class="form-control" placeholder="Enter Serie Title" %}
+           <!-- {{ field|add_class:'form-control' }} -->
            {% for error in field.errors %}
              <span class="help-block">{{ error }}</span>
            {% endfor %}
-         </div>
+        </div>
        {% endfor %}
        <div class="form-group">
            <button type="submit" class="btn btn-success">
@@ -87,13 +41,14 @@
                     {% for user_series_filter in user_series_filter.qs %}
                     <div class="grid_1_of_5 images_1_of_5">
                          <a href="{% url 'seri_detail' user_series_filter.id %}"><img src="{{ user_series_filter.serie_image.url }}" alt="" /></a>
-                         <h2><a href="preview.html">{{user_series_filter.serie_title}}</a></h2>
+                         <h2><a href="{% url 'seri_detail' user_series_filter.id %}">{{user_series_filter.serie_title}}</a></h2>
                         <div class="price-details">
                            <div class="price-number">
-                                <p><span class="rupees">{{user_series_filter.serie_cost}}</span></p>
+                                <!-- <p><span class="rupees">{{user_series_filter.serie_cost}}</span></p> -->
+                                <p><span class="rupees">COST : FREE</span></p>
                             </div>
                                        <div class="add-cart">								
-                                        <h4><a href="preview.html">{{user_series_filter.serie_VJ}}</a></h4>
+                                        <h4><a href="{% url 'seri_detail' user_series_filter.id %}">{{user_series_filter.serie_VJ}}</a></h4>
                                      </div>
                                  <div class="clear"></div>
                         </div>
@@ -109,60 +64,4 @@
            </div>
       </div>
     </div>
-    <div class="footer">
-        <div class="wrap">	
-        <div class="section group">
-               <div class="col_1_of_4 span_1_of_4">
-                       <h4>Information</h4>
-                       <ul>
-                       <li><a href="{% url 'contact' %}">About Us</a></li>
-                       <li><a href="#">Customer Service</a></li>
-                       <li><a href="#">Advanced Search</a></li>
-                       <li><a href="#">Privacy Policy</a></li>
-                       </ul>
-                   </div>
-               
-               <div class="col_1_of_4 span_1_of_4">
-                   <h4>My account</h4>
-                       <ul>
-                           <li><a href="{% url 'sub_payment' %}">Subscribe</a></li>
-                           <li><a href="{% url 'login' %}">LogIn</a></li>
-                           <li><a href="{% url 'signup' %}">Register</a></li>
-                           <li><a href="{% url 'logout' %}">Logout</a></li>	
-                       </ul>
-               </div>
-               <div class="col_1_of_4 span_1_of_4">
-                   <h4>Contact</h4>
-                       <ul>
-                           <li><span>0704544125</span></li>
-                           <li><span>0782411217</span></li>
-                       </ul>
-                       <div class="social-icons">
-                           <h4>Follow Us</h4>     
-                                <ul>
-                                 <li><a href="#" target="_blank"><img src="{% static 'images/facebook.png' %}" alt="" /></a></li>
-                                 <li><a href="#" target="_blank"><img src="{% static 'images/twitter.png' %}" alt="" /></a></li>
-                                 <li><a href="#" target="_blank"><img src="{% static 'images/skype.png' %}" alt="" /> </a></li>
-                                 <li><a href="#" target="_blank"> <img src="{% static 'images/linkedin.png' %}" alt="" /></a></li>
-                                 <div class="clear"></div>
-                            </ul>
-                           </div>
-               </div>
-           </div>
-            <div class="copy_right">
-               <p>Usakag fashions © All rights Reseverd | Design by  <a href="#">UK_MOVIES</a> </p>
-          </div>			
-       </div>
-     <script type="text/javascript">
-         $(document).ready(function() {			
-             $().UItoTop({ easingType: 'easeOutQuart' });
-             
-         });
-     </script>
-     <a href="#" id="toTop"><span id="toTopHover"> </span></a>
-    
-        
-    </body>
-    </html>
-    
-    
+ {% endblock content %}
