--- a/film/templates/base.html
+++ b/film/templates/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>  
 {% load static %}
 <head>
-<title>UK_MOVIES</title>
+<title>ukmoviesug.com</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
@@ -69,7 +69,7 @@
 	</div>
     <div class="header_top">
         <div class="logo">
-            <a href="{% url 'movie' %}"><img src="{% static 'images/Uk Logo.png' %}" alt="" /></a>
+            <a href="{% url 'movie' %}"><img src="{% static 'images/UkLogo1.png' %}" alt="" /></a>
         </div>
             <div class="header_top_right">
               
