--- a/film/templates/index.html
+++ b/film/templates/index.html
@@ -103,8 +103,9 @@
 					 <h2><a href="{% url 'mov_detail' user_filter.id %}">{{user_filter.movie_title}}</a></h2>
 					<div class="price-details">
 				       <div class="price-number">
-							<p><span class="rupees">COST : FREE</span></p><br>
+							<p><span class="rupees">COST : FREE</span></p>
 					    </div>
+						<br>
 						<div class="price-number">
 							<p><span class="rupees">{{user_filter.movie_release_date}}</span></p>
 					    </div>
