--- a/film/templates/serie_preview.html
+++ b/film/templates/serie_preview.html
@@ -19,7 +19,7 @@
 				  </div>
 				<div class="desc span_3_of_2">
 					<div class="available">
-						<p>
+						<!-- <p>
 							{%if serie_detail.season_set.all %} 
 							{% for season in serie_detail.season_set.all %}
 							<button class="accordion">{{ season.season_name }}</button>
@@ -30,6 +30,33 @@
 							{% endfor %} 
 								{% endfor %}
 								{%else%}
+							  <div class="card-body">
+								<h4>No Data available</h4>
+								</div>
+								 {%endif%}  
+						  </p> -->
+
+                          <p>
+							{%if serie_detail.season_set.all %}
+						  <div class="accordion" id="accordionPanelsStayOpenExample">
+							<div class="accordion-item">
+							{% for season in serie_detail.season_set.all %}
+							  <h2 class="accordion-header" id="panelsStayOpen-headingOne">
+								<button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
+									{{ season.season_name }}
+								</button>
+							  </h2>
+							  <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
+								{% for episode in season.episode_set.all %}
+								<div class="accordion-body">
+								  <strong>{{ episode.episode_name }}</strong>
+								</div>
+								{% endfor %} 
+							  </div>
+							{% endfor %}
+							</div>
+						  </div>
+						  {%else%}
 							  <div class="card-body">
 								<h4>No Data available</h4>
 								</div>
