--- a/film/templates/subscription1.html
+++ b/film/templates/subscription1.html
@@ -91,7 +91,7 @@
 							<div class="input-group-append">
 								<span class="input-group-text"><i class="fas fa-user"></i></span>
 							</div>
-							<input type="text" name="username" placeholder="Enter Name..." class="form-control">
+							<input type="text" name="username" placeholder="Enter Email..." class="form-control">
 						</div>
 						<div class="input-group mb-2">
 							<div class="input-group-append">
