--- a/film/templates/index.html
+++ b/film/templates/index.html
@@ -18,6 +18,8 @@
 								  <li><a href="{% url 'search_items' %}">{{get_categorys.category_name}}</a></li>
 							     
 								  {% endfor %} 
+								  <li><a href="{% url 'actions' %}">ACT</a></li>
+								  <li><a href="{% url 'search_items' %}">COMEDY</a></li>
 						  	 </ul>
 						</div>					
 		  	        </div>
