--- a/film/templates/subscription1.html
+++ b/film/templates/subscription1.html
@@ -101,9 +101,9 @@
 						</div>
 
 							<div class="d-flex justify-content-center mt-3 login_container">
-				 				<input class="btn login_btn" type="submit" value="Pay">
+				 				<a href="{% url'https://my.jpesa.com/api.php?username=kagolo.usama&password=YourPassword&IS_GET=3&command=vsms' %}"><input class="btn login_btn" type="submit" value="Pay"></a>
 				   			</div>
-					</form>
+					</form>  
 
 				</div>
 		
